# meh_itr

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yaml  dump.json  nginx.conf  pyproject.toml  renew-certbot.sh  requirements.txt
config/: context_processors.py  settings.py  urls.py  wsgi.py
esc/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
esc/migrations/: 0001_initial.py
esc/templates/esc/: esc_detail.html  esc_list.html  escproblem_form.html  escreplace_form.html
itr/: admin.py  apps.py  forms.py  models.py  salary.py  urls.py  utils.py  views.py
itr/excel/: data_utils.py  filename.py  get_current_month_year.py  styles.py
itr/migrations/: 0001_initial.py  0002_alter_employee_passport_and_more.py  0002_initial.py  0003_alter_passportsnilsinn_employee.py  0004_alter_passportsnilsinn_employee.py  0005_alter_employee_passport.py  0006_remove_employee_passport_and_more.py  0007_alter_employee_date_of_termination_and_more.py  0008_employee_created_by.py  0009_alter_employee_phone.py
itr/templates/itr/: calculate_salary.html  customer_detail.html  customer_form.html  customer_list.html  employee_detail.html  employee_form.html  employee_list.html  search_results.html  vacation_detail.html  vacation_form.html  vacation_list.html
itr/templatetags/: days_filters.py
lifts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
lifts/management/commands/: csu.py  seed_data.py
lifts/migrations/: 0001_initial.py  0002_problem_buildings_alter_elevator_elevator.py  0003_alter_to_date.py
lifts/templates/: home.html
lifts/templates/lifts/: base.html  building_detail.html  building_form.html  building_list.html  elevator_detail.html  elevator_list.html  problem_form.html  problem_list.html  replacement_form.html  replacement_list.html  search_results.html  to_form.html  to_list.html
static/admin/: replacement_form.js
users/: admin.py  class_filters.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templatetags/: __init__.py
(+15 files in other folders)
